# cargo                                                             :Scratch:

# [[file:~/Workspace/Programming/rust-libs/liblbfgs/lbfgs.note::*cargo][cargo:1]]
[package]
name = "liblbfgs"
edition = "2018"
version = "0.0.7"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
quicli = "0.3"

[build-dependencies]
cc = "*"
bindgen = "0.42"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "rosenbrock"
harness = false
# cargo:1 ends here
